# Helpdesk-Chatbot

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  README.md  bot.py  data.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
docker/: _main.py  gunicorn_conf.py  start.sh
noticebot/plugins/: bridge.py
noticebot/plugins/csts/: __init__.py
src/plugins/: bridge.py
src/plugins/csts/: __init__.py  config.py  handle.py  matcher.py  model.py  record.py  rules.py  scheduler.py  ticket_manager.py  utils.py
src/plugins/csts/handle/: __init__.py  customer.py  engineer.py  permission.py  superuser.py
src/plugins/csts/migrations/: 277e859249e8_add_engineer.py  43e51beb9380_first_revision.py  6cf56855cbc2_add_schedule_time_string.py  87d45d1492a0_first_revision.py  8e5d6f386552_first_revision.py  c2406d9c86f3_first_revision.py
