[project]
name = "Helpdesk-Chatbot"
version = "0.1.0"
description = "工单客服机器人"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_chatrecorder", "nonebot_plugin_localstore", "nonebot_plugin_datastore"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
