[project]
name = "Helpdesk-Chatbot"
version = "0.1.0"
description = "工单客服机器人"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-plugin-localstore",
    "nonebot_plugin_chatrecorder",
    "nonebot-plugin-apscheduler",
    "nonebot_plugin_datastore",
    "pydantic",
    "nonebot-plugin-orm[sqlite]",
    "nonebot-adapter-onebot",
    "nonebot-adapter-feishu",
    "pytz"
]
authors = [
  {name = "faithleysath"},
  {name = "jerry"},
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "飞书", module_name = "nonebot.adapters.feishu"}
]
plugins = ["nonebot_plugin_localstore", "nonebot_plugin_orm", "nonebot_plugin_chatrecorder", "nonebot_plugin_apscheduler", "nonebot_plugin_datastore"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
